Implements highlights on nav dropdown hover and fixes issue with bottom scrollbar showing in left pane.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -90,8 +90,7 @@ a.view-tools {
 }
 
 #inside-wrap {
-  padding: 9px 0px 35px 8px;
-  // margin-left: -10px;
+  padding: 9px 0px 30px 8px;
 }
 
 .tooltip.bottom-left {
