--- a/src/directives/templates/styles/_mmsTree.scss
+++ b/src/directives/templates/styles/_mmsTree.scss
@@ -13,6 +13,7 @@ ul.abn-tree i.indented {
 }
 
 ul.abn-tree {
+  overflow: hidden;
   cursor: pointer;
 }
 
